--- a/_include/head.html
+++ b/_include/head.html
@@ -9,4 +9,5 @@
     <link rel="icon" href="/favicon.ico?" type="image/x-icon">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml " | prepend: site.baseurl | prepend: site.url }}">
     
-    
+    <link rel="stylesheet" href="{{ "/_source/css/code.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/_source/css/main.css" | prepend: site.baseurl }}">
