--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,3 +1,9 @@
 
-.menu { border:1px solid red; }
-.content { border:1px solid blue; }
+body { background:#C7EDCC; }
+
+header { border:1px solid yellow; }
+footer { border:1px solid yellow; }
+
+.menu { border:1px solid red; width:200px; float:left; }
+
+.content { border:1px solid blue; width:850px; margin:0 auto 0 auto; }
