--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -29,18 +29,18 @@
         <div class="post-recent">
             <div class="pre">
                 {% if page.previous %}
-                <p><strong>ÉÏÒ»Æª</strong> <a href="{{ page.previous.url | prepend: site.baseurl }}">{{ page.previous.title }}</a></p>
+                <p><strong>ä¸Šä¸€ç¯‡</strong> <a href="{{ page.previous.url | prepend: site.baseurl }}">{{ page.previous.title }}</a></p>
                 {% endif %}
             </div>
             <div class="nex">
                 {% if page.next %}
-                <p><strong>ÏÂÒ»Æª</strong> <a href="{{ page.next.url | prepend: site.baseurl }}">{{ page.next.title }}</a></p>
+                <p><strong>ä¸‹ä¸€ç¯‡</strong> <a href="{{ page.next.url | prepend: site.baseurl }}">{{ page.next.title }}</a></p>
                 {% endif %}
             </div>
         </div>
 
         <div class="comments">
-            	ÆÀÂÛ°¡¡­
+            	è¯„è®ºå•Šâ€¦
         </div>
     </div>
     
