_layouts/item.html to UTF-8 test

--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="comments">
-            comments...
+            comments...评论
         </div>
     </div>
     
