--- a/_includes/category.html
+++ b/_includes/category.html
@@ -9,4 +9,11 @@
     {% endfor %}
   {% endif %}
 {% endcapture %}
-{% capture category_size %}{{ categories | strip_newlines | replace: ' ', '' | size }}{% endcapture %}　
+{% capture category_size %}{{ categories | strip_newlines | replace: ' ', '' | size }}{% endcapture %}
+{% unless category_size == '0' %}
+<!-- <span class="point">•</span> 　-->
+<span class="categories">
+  <i class="fa fa-th-list"></i>{{ categories }}
+  <!-- <span class="point">•</span> -->
+</span>
+{% endunless %}
