--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>{{ page.title }}</title>
+    {% include head.html %}
 </head>
 <body>
-    {{ content }}
+    {% include header.html %}
+    
+    <!--　-->
+    {{content}}
+    
+    {% include footer.html %}
 </body>
 </html>
