--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -20,7 +20,7 @@
     <div class="content">
     
         <ul>
-            {% for post in paginator.posts %}
+            {% for post in site.categories[page.category] %}
             <li>
             <h2>
                 <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
