--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -20,7 +20,7 @@
     <div class="content">
     
         <div>
-            {% for cat in site.all_categories %}{% if page.category == cat[0] %}<a href="/">首页</a>&nbsp;&lt;&nbsp;<a href="{{cat[2]}}">{{cat[1]}}</a>&nbsp;&lt;&nbsp;列表{% endif %}{% endfor %}
+            {% for cat in site.ww_categories %}{% if page.category == cat[0] %}<a href="/">首页</a>&nbsp;&lt;&nbsp;<a href="{{cat[2]}}">{{cat[1]}}</a>&nbsp;&lt;&nbsp;列表{% endif %}{% endfor %}
         </div>
         <ul>
             {% for post in site.categories[page.category] %}
