--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -10,6 +10,8 @@
         {% for category in site.categories %}
         <li>
             <a href="{{ root_url }}/list#{{ category | first }}" class="categories-list-item" cate="{{ category | first }}">
+                {% for cat in site.ww_categories %}
+                    {% if category == cat[0] %}<a href="/">首页</a>&nbsp;&lt;&nbsp;<a href="/{{cat[0]}}">{{cat[1]}}</a>&nbsp;&lt;&nbsp;列表{% endif %}{% endfor %}
                 <span class="name">{{ category | first }}</span>
                 <span class="badge">{{ category | last | size }}</span>
             </a>
@@ -20,7 +22,7 @@
     <div class="content">
     
         <div>
-            {% for cat in site.ww_categories %}{% if page.category == cat[0] %}<a href="/">首页</a>&nbsp;&lt;&nbsp;<a href="{{cat[2]}}">{{cat[1]}}</a>&nbsp;&lt;&nbsp;列表{% endif %}{% endfor %}
+            {% for cat in site.ww_categories %}{% if page.category == cat[0] %}<a href="/">首页</a>&nbsp;&lt;&nbsp;<a href="/{{cat[0]}}">{{cat[1]}}</a>&nbsp;&lt;&nbsp;列表{% endif %}{% endfor %}
         </div>
         <ul>
             {% for post in site.categories[page.category] %}
