--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -11,7 +11,10 @@
         <li>
             <a href="{{ root_url }}/list#{{ category | first }}" class="categories-list-item" cate="{{ category | first }}">
                 {% for cat in site.ww_categories %}
-                    {% if category == cat[0] %}<a href="/">首页</a>&nbsp;&lt;&nbsp;<a href="/{{cat[0]}}">{{cat[1]}}</a>&nbsp;&lt;&nbsp;列表{% endif %}{% endfor %}
+                    {% if category | first == cat[0] %}
+                        {{cat[1]}}
+                    {% endif %}
+                {% endfor %}
                 <span class="name">{{ category | first }}</span>
                 <span class="badge">{{ category | last | size }}</span>
             </a>
