--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -9,14 +9,8 @@
     <div class="menu">
         {% for category in site.categories %}
         <li>
-            <a href="{{ root_url }}/list#{{ category | first }}" class="categories-list-item" cate="{{ category | first }}">
-                {% for cat in site.ww_categories %}
-                    {{cat[1]}}
-                    {% if category[0] == cat[0] %}
-                        {{cat[1]}}
-                    {% endif %}
-                {% endfor %}
-                <span class="name">{{ category | first }}</span>
+            <a href="{{ root_url }}/list#{{ category | first }}" class="categories-list-item" cate="{{ category | first }}"> 
+                <span class="name">{% for cat in site.ww_categories %}{% if category[0] == cat[0] %}{{cat[1]}}{% endif %}{% endfor %}</span>
                 <span class="badge">{{ category | last | size }}</span>
             </a>
         </li>
@@ -26,10 +20,10 @@
     <div class="content">
     
         <div>
-            {% for cat in site.ww_categories %}{% if page.category == cat[0] %}<a href="/">首页</a>&nbsp;&lt;&nbsp;<a href="/{{cat[0]}}">{{cat[1]}}</a>&nbsp;&lt;&nbsp;列表{% endif %}{% endfor %}
+            {% for cat in site.ww_categories %}{% if page.category[0] == cat[0] %}<a href="/">首页</a>&nbsp;&lt;&nbsp;<a href="/{{cat[0]}}">{{cat[1]}}</a>&nbsp;&lt;&nbsp;列表{% endif %}{% endfor %}
         </div>
         <ul>
-            {% for post in site.categories[page.category] %}
+            {% for post in site.categories[page.category[0]] %}
             <li>
             <h2>
                 <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
