--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -24,12 +24,12 @@
             {% for category in site.categories %}
             {% for cat in site.ww_categories %}
                 {% if category[0] == cat[0] %}
-                &nbsp;&rt;&nbsp;<a href="/{{cat[0]}}">{{cat[1]}}</a>
+                &nbsp;&gt;&nbsp;<a href="/{{cat[0]}}">{{cat[1]}}</a>
                 {% endif %}
             {% endfor %}
             {% endfor %}
             <hr>
-            {{page.categories}}|{{page.id}}
+            {{page.categories}}|{{page.id}}|{{page.path}}
         </div>
         <ul>
             {% for post in paginator.posts %}
