--- a/_includes/category.html
+++ b/_includes/category.html
@@ -13,7 +13,6 @@
 {% unless category_size == '0' %}
 <!-- <span class="point">•</span> 　-->
 <span class="categories">
-  <i class="fa fa-th-list"></i>{{ categories }}
-  <!-- <span class="point">•</span> -->
+  {{ categories }}
 </span>
 {% endunless %}
