--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,5 +9,7 @@
     <link rel="icon" href="/favicon.ico?" type="image/x-icon">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml " | prepend: site.baseurl | prepend: site.url }}">
     
+    <link rel="stylesheet" href="{{ "/resources/css/clear.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/resources/css/code.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/resources/css/main.css" | prepend: site.baseurl }}">
+    
