--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,69 @@
 <body>
     {% include header.html %}
     
-    <!--　-->
-    {{content}}
+    <div class="left">
+	    <div class="left_box categories">
+	    	{% for category in site.categories %}
+	        <li>
+	            <a href="{{ root_url }}/{{ category | first }}"> 
+	                {% for cat in site.ww_categories %}{% if category[0] == cat[0] %}{{cat[1]}}{% endif %}{% endfor %}
+	                <span>({{ category | last | size }})</span>
+	            </a>
+	        </li>
+	        {% endfor %}
+	    </div>
+	    <div class="left_box">
+	        {% for my_page in site.pages %}
+            {% if my_page.type == 'page' %}
+            <li><a href="{{ my_page.url | prepend: site.baseurl }}" {% if my_page.url == page.url %}class="active"{% endif %}>{{ my_page.title }}</a></li>
+            {% endif %}
+	        {% endfor %}
+	    </div>
+    </div>
     
-    {% include footer.html %}
+    <div class="right">
+        <ul>
+        	{% if paginator.posts %}
+                {% assign post_list = paginator.posts %}
+            {% else %}
+                {% assign post_list = site.categories[page.categories] %}
+            {% endif %}
+            {% for post in post_list %}
+            <li class="right_box">
+	            <h2>
+	                <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+	            </h2>
+	            <div class="label">
+	            	<span>{{ post.date | date: "%F" }}</span>
+	            	{% if post.author %}<span>{{ post.author }}</span>{% endif %}
+	            	{% unless category_size == '0' %}<span>{{ categories }}</span>{% endunless %}
+	            </div>
+	            <div class="excerpt">
+	                {{post.excerpt}}
+	                <a class="read-all" href="{{ post.url | prepend: site.baseurl }}">更多</a>
+	            </div>
+            </li>
+            {% endfor %}
+        </ul>
+        <div class="pagination">
+			{% if paginator.previous_page %}
+		    <a href="/index.html" class="previous">首页</a>
+			<a href="{{ paginator.previous_page_path }}" class="previous">上一页</a>
+			{% else %}
+		    <span class="previous disable">首页</span>
+			<span class="previous disable">上一页</span>
+			{% endif %}
+			<span class="page_number ">{{ paginator.page }} / {{ paginator.total_pages }}</span>
+			{% if paginator.next_page %}
+		    <a href="{{ paginator.next_page_path }}" class="next">下一页</a>
+			<a href="/page{{ paginator.total_pages }}" class="next">末页</a>
+			{% else %}
+		    <span class="next disable">下一页</span>
+			<span class="next disable">末页</span>
+			{% endif %}
+        </div>
+        {% include footer.html %}
+    </div>
+
 </body>
 </html>
