--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,9 +1,220 @@
+/* copyright (c) ２０１７ weiwei.blog */
 
-body { background:#C7EDCC; }
+body {
+	margin: 0 20px;
+	background:#f5f5d5;
+	
+}
 
-header { border:1px solid yellow; }
-footer { border:1px solid yellow; }
+header {
+    height: 150px;
+    background:url("../images/logo.png") no-repeat;
+    overflow: hidden; 
+	}
+	header h1 {
+		margin: 20px 0 0 100px;
+		color: #000;
+	    font-size: 38px;
+	    font-weight: 900;
+	    letter-spacing: -1px;
+	    line-height: 1.2;
+		text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+	}
+	header h1 a{
+		color: #000;
+	}
+	header p {
+		margin-left: 100px;;
+		color: #aaa;
+	    font-size: 20px;
+	    font-weight: normal;
+	    letter-spacing: -1px;
+	    line-height: 1.3;
+	}
+	header p a {
+		color: #aaa;
+	
+}
 
-.menu { border:1px solid red; width:200px; float:left; }
 
-.content { border:1px solid blue; width:850px; margin:0 auto 0 auto; }
+
+.left {
+	float: left;
+	}
+	.left_box {
+		min-width: 160px;
+		max-width: 360px;
+		margin-bottom: 20px;
+		margin-right: 20px;
+		}
+		.left_box a{
+			display: block;
+			padding: 4px;
+			font-family: "楷体";
+			color: #666;
+			font-size: 18px;
+			margin-bottom: 1px;
+		}
+		.left_box a:hover{
+			background: rgba(248,0,59,0.1)
+		}
+		.categories span{
+			margin-left: 5px;
+		}
+		.outline li{
+			list-style-type:circle;
+			list-style-position: inside;
+		}
+		.outline a{
+			display: inline;
+			padding: 0;
+			line-height: 1.5;
+}
+
+.right {
+	float: left;
+	max-width: 800px;
+    min-width: 480px;
+    margin-bottom: 10px;
+    }
+    .right .right_box {
+    	margin-bottom: 50px;
+    }
+    .right .right_box h2 a{
+    	font-size: 24px;
+    	color: #000;
+    }
+    .right .right_box .label span{
+    	background: rgba(102,128,153,0.075);
+		color: rgba(44,63,81,0.5);
+		padding: 2px 5px;
+		font-family: "Source Code Pro",monospace;
+		margin-right: 5px;
+    }
+	.right .right_box .label span a{
+		color: rgba(44,63,81,0.5);
+	}
+	.right .right_box .label span a:hover{
+		color: rgba(44,63,81,0.7);
+	}
+    .right .right_box .excerpt{
+    	color:#666;
+    	line-height: 2;
+    	font-family: "楷体";
+    }
+    .right .read-all {
+    	background: #c00;
+    	color: #fff;
+    	border-radius: 5px;
+    	font-family: "楷体";
+    }
+    .right .pagination {
+    	border-top: 1px dashed #ccc;
+    	margin-top: 20px;
+    	line-height: 3;
+    }
+	.right .comment {
+    	border-top: 1px dashed #ccc;
+    	margin-top: 20px;
+    	padding-top: 20px;
+    }
+	.right .plugin {
+		border-top: 1px dashed #ccc;
+		margin-top: 20px;
+		padding-top: 20px;
+	}
+	
+}
+
+article {
+	line-height: 2;
+	font-family: "Source Code Pro",monospace;
+	margin-bottom:50px;
+	}
+	article #markdown-toc {
+		display: none;
+	}
+	article h2{
+		font-size: 32px;
+	}
+	article .read {
+		float:right;
+		font-size:14px;
+		margin-top:-20px;
+	}
+	article .copyright {
+    	color: #999;
+    	background: rgba(0,0,0,0.05);
+    	padding: 10px;
+		margin: 15px 0;
+    }
+    article .copyright a{
+    	color: #999;
+    }
+    article .copyright a:hover{
+    	text-decoration:underline;
+    }
+    article .copyright .qrcode {
+    	float: right;
+    	width:70px;
+    	height:70px;
+    	background: #ccc;
+    	margin-top: -68px;
+	}
+	article h3{
+		font-size: 24px;
+		border-bottom:1px solid rgba(102,128,153,0.2);
+		margin:30px 0 20px;
+		font-family:"Hiragino Sans GB","WenQuanYi Micro Hei","Microsoft YaHei",tahoma,arial,simsun;
+	}
+	article h4{
+		font-size: 20px;
+		margin:20px 0 10px;
+		font-family:"Hiragino Sans GB","WenQuanYi Micro Hei","Microsoft YaHei",tahoma,arial,simsun;
+	}
+	article blockquote{
+		color: #999;
+		background: rgba(0,0,0,0.05);
+		padding: 10px;
+		margin: 15px 0;
+		border-left:5px solid rgba(44,63,81,0.3);
+	}
+	article th {
+		background: rgba(102,128,153,0.075);
+	}
+	article th,
+	article td {
+		border:1px solid rgba(102,128,153,0.2);
+		padding:5px;
+	}
+	article code {
+		background: #272822;
+		color: #d1d1c9;
+		border: none;
+	}
+	article ul {
+		margin-left: 20px;
+	}
+	article li {
+		list-style-type: square;
+	}
+	article a {
+		color: #1980e6;
+	}
+	article a:hover {
+		color: #0f4d8a;
+		text-decoration: underline;
+}
+
+
+footer { 
+	margin: 20px 0;
+	color: #999;
+	
+	}
+	footer a{
+		color: #808080;
+	}
+	footer i{
+		float: right;
+}
