--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,7 +56,7 @@
 	<script type="text/javascript">
 		// 目录
 		var TOCString = document.querySelector('#markdown-toc').innerHTML
-        var contentUl = document.querySelector('.outline')
+        var contentUl = document.querySelector('.outline>a')
         contentUl.insertAdjacentHTML('afterend', TOCString);
 	</script>
 </body>
