--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@
 	<div class="left">
 		<div class="left_box outline">
 	        <a href="javascript:history.go(-1);">&lt; 返回</a>
+	        <ol></ol>
 	    </div>
 	</div>
 	
@@ -58,8 +59,8 @@
 	<script type="text/javascript">
 		// 目录
 		var TOCString = document.querySelector('#markdown-toc').innerHTML
-        var contentUl = document.querySelector('.outline>a')
-        contentUl.insertAdjacentHTML('afterend', TOCString);
+        var contentUl = document.querySelector('.outline ol')
+        contentUl.insertAdjacentHTML('afterBegin', TOCString);
 	</script>
 </body>
 </html>
