--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -58,6 +58,9 @@ header {
 		.left_box a:hover{
 			background: rgba(248,0,59,0.1)
 		}
+		.left_box a.active{
+		    background: rgba(248,0,59,0.2)
+		}
 		.categories span{
 			margin-left: 0px;
 		}
@@ -137,6 +140,7 @@ article {
 	margin-bottom:50px;
 	}
 	article > p,
+	article li,
 	article > blockquote{
 	    line-height: 2;
         font-family: "宋体";
@@ -196,6 +200,7 @@ article {
 	}
 	article th {
 		background: rgba(102,128,153,0.075);
+		font-weight: normal;
 	}
 	article th,
 	article td {
@@ -207,10 +212,11 @@ article {
 		color: #d1d1c9;
 		border: none;
 	}
+	article ol,
 	article ul {
 		margin-left: 20px;
 	}
-	article li {
+	article ul li {
 		list-style-type: square;
 	}
 	article a {
