--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 	    <div class="left_box categories">
 	    	{% for category in site.categories %}
 	        <li>
-	            <a href="{{ root_url }}/{{ category | first }}" {% if page.categories[0] == category %}class="active"{% endif %}> 
+	            <a href="{{ root_url }}/{{ category | first }}" {% if page.categories == category[0] %}class="active"{% endif %}> 
 	                {% for cat in site.ww_categories %}{% if category[0] == cat[0] %}{{cat[1]}}{% endif %}{% endfor %}<span>({{ category | last | size }})</span>
 	            </a>
 	        </li>
@@ -40,7 +40,7 @@
 	            <div class="label">
 	            	<span>{{ post.date | date: "%F" }}</span>
 	            	{% if post.author %}<span>{{ post.author }}</span>{% endif %}
-	            	{% if post.categories[0]}<a href="{{ root_url }}/{{ post.categories[0] }}">{{ post.categories[0] }}</a>{% endif %}
+	            	{% if post.categories %}<a href="{{ root_url }}/{{ post.categories }}">{{ post.categories }}</a>{% endif %}
 	            </div>
 	            <div class="excerpt">
 	                {{post.excerpt}}
@@ -49,6 +49,8 @@
             </li>
             {% endfor %}
         </ul>
+        
+        {% if page.categories %}
         <div class="pagination">
 			{% if paginator.previous_page %}
 		    <a href="/index.html" class="previous">首页</a>
@@ -66,6 +68,8 @@
 			<span class="next disable">末页</span>
 			{% endif %}
         </div>
+        {% endif %}
+        
         {% include footer.html %}
     </div>
 
