--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 	    <div class="left_box categories">
 	    	{% for category in site.categories %}
 	        <li>
-	            <a href="{{ root_url }}/{{ category | first }}" {% if page.categories == category[0] %}class="active"{% endif %} title="{{ page.categories }},{{ category | first }}"> 
+	            <a href="{{ root_url }}/{{ category | first }}" {% if page.categories == category[0] %}class="active"{% endif %}> 
 	                {% for cat in site.ww_categories %}{% if category[0] == cat[0] %}{{cat[1]}}{% endif %}{% endfor %}<span>({{ category | last | size }})</span>
 	            </a>
 	        </li>
@@ -50,8 +50,8 @@
             {% endfor %}
         </ul>
         
-        {% if !page.categories %}
-        <div class="pagination">
+        {% if page.categories != "" %}
+        <div class="pagination" title="{{ page.categories }}">
 			{% if paginator.previous_page %}
 		    <a href="/index.html" class="previous">首页</a>
 			<a href="{{ paginator.previous_page_path }}" class="previous">上一页</a>
