--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,8 +50,7 @@
             </div>
         </div>
         
-        <div class="comment">
-        </div>
+        {% include comment.html %}
         
         {% include footer.html %}
     </div>
