--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -7,12 +7,12 @@ body {
 }
 
 header {
-    height: 150px;
+    height: 100px;
     background:url("../images/logo.png") no-repeat;
     overflow: hidden; 
 	}
 	header h1 {
-		margin: 20px 0 0 100px;
+		margin: 20px 0 0 70px;
 		color: #000;
 	    font-size: 38px;
 	    font-weight: 900;
@@ -23,6 +23,9 @@ header {
 	header h1 a{
 		color: #000;
 	}
+	header h1 a:hover{
+        color: #333;
+    }
 	header p {
 		margin-left: 100px;;
 		color: #aaa;
