--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 	    <div class="left_box categories">
 	    	{% for category in site.categories %}
 	        <li>
-	            <a href="{{ root_url }}/{{ category | first }}" {% if page.categories == category[0] %}class="active"{% endif %}> 
+	            <a href="{{ site.url }}/{{ category | first }}" {% if page.categories == category[0] %}class="active"{% endif %}> 
 	                {% for cat in site.ww_categories %}{% if category[0] == cat[0] %}{{cat[1]}}{% endif %}{% endfor %}<span>({{ category | last | size }})</span>
 	            </a>
 	        </li>
@@ -19,7 +19,7 @@
 	    <div class="left_box">
 	        {% for my_page in site.pages %}
             {% if my_page.type == 'page' %}
-            <li><a href="{{ my_page.url | prepend: site.baseurl }}" {% if my_page.url == page.url %}class="active"{% endif %}>{{ my_page.title }}</a></li>
+            <li><a href="{{ my_page.url }}" {% if my_page.url == page.url %}class="active"{% endif %}>{{ my_page.title }}</a></li>
             {% endif %}
 	        {% endfor %}
 	    </div>
@@ -35,7 +35,7 @@
             {% for post in post_list %}
             <li class="right_box">
 	            <h2>
-	                <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+	                <a href="{{ post.url }}">{{ post.title }}</a>
 	            </h2>
 	            <div class="label">
 	            	<span>{{ post.date | date: "%F" }}</span>
@@ -44,7 +44,7 @@
 	            </div>
 	            <div class="excerpt">
 	                {{post.excerpt}}
-	                <a class="read-all" href="{{ post.url | prepend: site.baseurl }}">更多</a>
+	                <a class="read-all" href="{{ post.url }}">更多</a>
 	            </div>
             </li>
             {% endfor %}
