--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -2,17 +2,15 @@
 
 body {
 	margin: 0 20px;
-	background:#f5f5d5;
-	
+	background:#f5f5d5 url("../images/logo.png") no-repeat;
 }
 
 header {
     height: 100px;
-    background:url("../images/logo.png") no-repeat;
     overflow: hidden; 
 	}
 	header h1 {
-		margin: 20px 0 0 70px;
+		margin: 20px 0 0 55px;
 		color: #000;
 	    font-size: 38px;
 	    font-weight: 900;
