--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
 			{% if paginator.total_pages == 1 %}
 			<span class="current">1</span>
 			{% else %}
-    			{% for count in (2..paginator.total_pages-1) %}
+    			{% for count in (1..paginator.total_pages) %}
                 {% if count == paginator.page %}
                 <span class="current">{{count}}</span>
                 {% else %}
@@ -82,12 +82,10 @@
 			{% if paginator.page < paginator.total_pages %}
             <a href="/}">... {{ paginator.total_pages }}</a>
             {% else %}
-            <a href="/}">{{ paginator.total_pages }}</a>
+            <a href="/page{{ paginator.total_pages }}}">{{ paginator.total_pages }}</a>
             {% endif %}
             {% endif %}
             
-			<span class="page_number ">{{ paginator.page }} / {{ paginator.total_pages }}</span>
-			
 			{% if paginator.next_page %}
 		    <a    class="next" href="{{ paginator.next_page_path }}" >»</a>
 			{% else %}
