--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -127,6 +127,17 @@ header {
     	margin-top: 20px;
     	line-height: 3;
     }
+    .right .pagination span,
+    .right .pagination a{
+        display: block;
+        text-align: center;
+        padding: 10px;
+        border-radius: 3px;
+        background: #ccc;
+    }
+    .right .pagination .current{
+        background: #ccf;
+    }
 	.right .comment {
     	border-top: 1px dashed #ccc;
     	margin-top: 20px;
