--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -126,6 +126,7 @@ header {
     	border-top: 1px dashed #ccc;
     	margin-top: 20px;
     	line-height: 3;
+    	padding: 20px 0;
     }
     .right .pagination span,
     .right .pagination a{
@@ -134,13 +135,15 @@ header {
         border:1px solid #cccccc;
         border-radius: 3px;
         background: #fff;
-        margin: 5px;;
+        margin: 5px;
+        font-size: 16px;
+        line-height: 16px;
     }
     .right .pagination .current{
         background: #ff6688;
+        border-color: #ff6688;
         color: #fff;
     }
-    .right .pagination span:hover,
     .right .pagination a:hover{
         border-color: #ff6688;
         color: #ff6688;
