--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 	            </div>
 	            <div class="excerpt">
 	                {{post.excerpt}}
-	                <a class="read-all" href="{{ post.url }}">更多</a>
+	                <a class="read-all" href="{{ post.url }}">...查看全文</a>
 	            </div>
             </li>
             {% endfor %}
