--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@
         <article>
         	<h1>{{ page.title }}</h1>
 	        <p class="read">阅读:<span id="busuanzi_value_page_pv">0</span></p>
-	        <div class="copyright">
+	        <div class="copyright fixed">
 	        	<div class="info">
 	        		{% if page.author=="weiwei" %}
 		        	<p>版权协议：<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh" target="_blank">自由转载-保持署名-非商业性使用-禁止演绎 4.0</a></p>
@@ -30,9 +30,7 @@
 		        	<p>转载日期：{{ page.date | date: "%F" }}</p>
 		        	{% endif %}
 	        	</div>
-	        	<div class="qrcode">
-	        	    <img src="http://qr.liantu.com/api.php?el=l&m=0&text={{ site.url }}{{ page.url }}" alt="手机扫码访问本文" />
-	        	</div>
+	        	<img src="http://qr.liantu.com/api.php?el=l&m=0&bg=e9e9ca&text={{ site.url }}{{ page.url }}" alt="手机扫码访问本文" />
 	        </div>
         	{{content}}
         </article>
