--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@
 		        	<p>转载日期：{{ page.date | date: "%F" }}</p>
 		        	{% endif %}
 	        	</div>
-	        	<img src="http://qr.liantu.com/api.php?el=l&m=0&bg=e9e9ca&text={{ site.url }}{{ page.url }}" alt="手机扫码访问本文" />
+	        	<img src="http://qr.liantu.com/api.php?el=l&m=0&bg=e9e9ca&w=70&text={{ site.url }}{{ page.url }}" alt="手机扫码访问本文" />
 	        </div>
         	{{content}}
         </article>
