--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -43,10 +43,8 @@ header {
 	float: left;
 	}
 	.left_box {
-		min-width: 160px;
-		max-width: 360px;
 		margin-bottom: 20px;
-		margin-right: 30px;
+		margin-right: 50px;
 		}
 		.left_box a{
 			display: block;
@@ -89,7 +87,7 @@ header {
 .right {
 	float: left;
 	max-width: 800px;
-    min-width: 360px;
+    min-width: 320px;
     margin-bottom: 10px;
     }
     .right .right_box {
@@ -166,6 +164,11 @@ header {
 
 article {
 	margin-bottom:50px;
+	}
+	article > img {
+	   min-width: 320px;
+	   max-width: 800px;
+	   text-align: center;
 	}
 	article > p,
 	article li,
@@ -270,3 +273,11 @@ footer {
 	footer i{
 		float: right;
 }
+
+
+/* 手机优化 */
+
+@media screen and (max-width: 361px) {
+    .left_box {float:left;}
+    .left {background:#fff;}
+} 
