--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,6 +6,7 @@
 <body>
     {% include header.html %}
     
+    <div class="mobile_nav">≡</div>
     <div class="left">
 	    <div class="left_box categories">
 	    	{% for category in site.categories %}
