--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -277,7 +277,32 @@ footer {
 
 /* 手机优化 */
 
+.mobile_nav { display: none; }
 @media screen and (max-width: 361px) {
-    .left_box {float:left;}
-    .left {background:#fff;}
+    .mobile_nav{
+        display: block;
+        background:rgba(0,0,0,0.4);
+        border-radius: 5px;
+        width:30px;
+        height:30px;
+        text-align:center;
+        line-height:30px;
+        font-weight:bold;
+        color:#fff;
+        font-size:28px;
+        margin-bottom:5px;
+    }
+    .left {
+        display: none;
+        background:rgba(0,0,0,0.5);
+        border-radius: 5px;
+        width: 100%;
+    }
+    .left_box {
+        float:left;
+        margin: 10px;
+    }
+    .left_box a{
+        color:#fff;
+    }
 } 
