--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -289,14 +289,16 @@ footer {
         line-height:30px;
         font-weight:bold;
         color:#fff;
-        font-size:28px;
-        margin-bottom:5px;
+        font-size:30px;
+        margin-bottom:20px;
+        cursor: pointer;
     }
     .left {
         display: none;
         background:rgba(0,0,0,0.5);
         border-radius: 5px;
         width: 100%;
+        margin-bottom: -15px 0 20px 0;
     }
     .left_box {
         float:left;
