--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -287,9 +287,8 @@ footer {
         height:30px;
         text-align:center;
         line-height:30px;
-        font-weight:bold;
         color:#fff;
-        font-size:30px;
+        font-size:20px;
         margin-bottom:20px;
         cursor: pointer;
     }
@@ -298,7 +297,7 @@ footer {
         background:rgba(0,0,0,0.5);
         border-radius: 5px;
         width: 100%;
-        margin-bottom: -15px 0 20px 0;
+        margin: -15px 0 20px 0;
     }
     .left_box {
         float:left;
