--- a/resources/css/code.css
+++ b/resources/css/code.css
@@ -6,16 +6,16 @@ code{
     margin: 0 2px;
     font-size: 90%;
     border-radius: 3px;
-    color: #000;
-    background-color: rgba(0, 0, 0, 0.06);
-    border: 1px solid #d7d0d2;
+    color:#d1d1c9;
+    background-color: #272822;
+    border: none;
     font-family: Monaco,Menlo,"Microsoft YaHei Mono",Consolas,"Courier New",monospace,sans-serif;
 }
 
 pre {
     margin: 12px 0;
     padding: 8px 12px;
-    /*overflow-x: auto;*/
+    overflow-x: auto;
     word-wrap: break-word;      /* IE 5.5-7 */
     white-space: -moz-pre-wrap; /* Firefox 1.0-2.0 */
     white-space: pre-wrap;      /* current browsers */
@@ -24,9 +24,6 @@ pre > code {
     margin: 0;
     padding: 0;
     font-size: 13px;
-    color:#d1d1c9;
-    border: none;
-    background-color: #272822
 }
 
 .highlight {
