--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,11 @@
 <body>
     {% include header.html %}
     
+    <div class="mobile_content">
+        <a href="javascript:history.go(-1);">&lt; 返回</a>
+        <span>目录 +</span>
+    </div>
+    
 	<div class="left">
 		<div class="left_box outline">
 	        <a href="javascript:history.go(-1);">&lt; 返回</a>
