--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@
 <body>
     {% include header.html %}
     
-    <div class="mobile_content">
+    <div class="mobile_content fixed">
         <a href="javascript:history.go(-1);">&lt; 返回</a>
         <span>目录 +</span>
     </div>
