--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -287,16 +287,17 @@ footer {
 .mobile_content {
     display: none;
     margin-bottom:15px;
-    font-size: 18px;
     border: 1px solid #666;
-    padding: 5px;
+    width: 100%;;
     }
     .mobile_content a {
         float: left;
         color: #666;
+        margin: 6px;
     }
     .mobile_content span {
         float: right;
+        margin: 6px;
 }
 
 @media screen and (max-width: 361px) {
@@ -322,7 +323,10 @@ footer {
     }
     .mobile_content+.left {
         border: 1px solid #666;
-        margin: -21px 0 20px 0;
+        margin: -16px 0 20px 0;
+    }
+    .mobile_content+.left .outline{
+        margin: 10px;
     }
     .mobile_content+.left .outline > a{
         display: none;
