--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,12 +26,12 @@
 	        <div class="copyright fixed">
 	        	<div class="info">
 	        		{% if page.author=="weiwei" %}
-		        	<p>版权协议：<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh" target="_blank">自由转载-保持署名-非商业性使用-禁止演绎 4.0</a></p>
-		        	<p>本文地址：<a href="#">{{ site.url }}{{ page.url }}</a></p>
+		        	<p>版权协议：<a class="protocol" href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh" target="_blank">自由转载-保持署名-非商业性使用-禁止演绎 4.0</a></p>
+		        	<p>本文地址：<a class="url" href="#">{{ site.url }}{{ page.url }}</a></p>
 		        	<p>发布日期：{{ page.date | date: "%F" }}</p>
 		        	{% else %}
 		        	<p>原文作者：{{ page.author }}</p>
-		        	<p>原文地址：<a href="{{ page.source_url }}">{{ page.source_url }}</a></p>
+		        	<p>原文地址：<a class="url" href="{{ page.source_url }}">{{ page.source_url }}</a></p>
 		        	<p>转载日期：{{ page.date | date: "%F" }}</p>
 		        	{% endif %}
 	        	</div>
