--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -2,39 +2,27 @@
 
 body {
 	margin: 0 20px;
-	background:#f5f5d5 url("../images/logo.png") no-repeat;
+	background:#f5f5d5;
 }
 
 header {
     height: 100px;
     overflow: hidden; 
+    background: url("../images/logo.png") no-repeat left 22px;
 	}
 	header h1 {
 		margin: 22px 0 0 55px;
-		color: #000;
 	    font-size: 38px;
 	    font-weight: 900;
 	    letter-spacing: -1px;
-	    line-height: 1.2;
 		text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 	}
 	header h1 a{
 		color: #000;
 	}
 	header h1 a:hover{
-        color: #666;
+        color: #777;
     }
-	header p {
-		margin-left: 100px;;
-		color: #aaa;
-	    font-size: 20px;
-	    font-weight: normal;
-	    letter-spacing: -1px;
-	    line-height: 1.3;
-	}
-	header p a {
-		color: #aaa;
-	
 }
 
 .left {
