--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -16,6 +16,7 @@ header {
 	    font-weight: 900;
 	    letter-spacing: -1px;
 		text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+		line-height: 50px;
 	}
 	header h1 a{
 		color: #000;
