--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -325,5 +325,5 @@ footer {
 
 /* 其他 */
 
-.cloud-tie-join-count { float: right; margin-top: -20px; }
+h2 + .cloud-tie-join-count { float: right; margin-top: -20px; }
 .cloud-tie-join-count .join-count { color: #ff6688; }
