--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@
                 <span>阅读:</span>
                 <span id="busuanzi_value_page_pv">0</span>
                 <span>评论:</span>
-	            <a class="cloud-tie-join-count" href="javascript:void(0);"><span class="join-count">0</span></a>
+	            <a class="cloud-tie-join-count" href="javascript:void(0);" id="cloud-tie-join-count"><span class="join-count">0</span></a>
 	        </p>
 	        <div class="copyright fixed">
 	        	<div class="info">
