--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,7 +62,7 @@
             <h2>我要发表看法</h2>
             <a class="cloud-tie-join-count" href="javascript:void(0);">
               <span class="join-count">0</span>
-              <span class="join-text">条评论</span>
+              <span class="join-text">条</span>
             </a>
             {% include comment.html %}
         </div>
