--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,10 @@
 
     <link rel="shortcut icon" href="/favicon.ico?" type="image/x-icon">
     <link rel="icon" href="/favicon.ico?" type="image/x-icon">
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml " | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml " | prepend: site.url }}">
     
-    <link rel="stylesheet" href="{{ "/resources/css/clear.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/resources/css/code.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/resources/css/main.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/resources/css/clear.css" }}">
+    <link rel="stylesheet" href="{{ "/resources/css/code.css" }}">
+    <link rel="stylesheet" href="{{ "/resources/css/main.css" }}">
     
+    <link rel="stylesheet" href="{{ "/resources/js/ww.js" }}">
