--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,5 +102,6 @@
         {% include footer.html %}
     </div>
 
+    <script type="text/javascript">storage_progress();</script>
 </body>
 </html>
