--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,4 @@
     <link rel="stylesheet" href="{{ "/resources/css/code.css" }}">
     <link rel="stylesheet" href="{{ "/resources/css/main.css" }}">
     
-    <link rel="stylesheet" href="{{ "/resources/js/ww.js" }}">
+    <script type="text/javascript" src="{{ "/resources/js/ww.js" }}"></script>
