--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,6 +8,14 @@
     
     <div class="mobile_nav">≡</div>
     <div class="left">
+        <div class="left_box">
+            <li><a href="/" {% if "/" == page.url %}class="active"{% endif %}>首页</a></li>
+            {% for my_page in site.pages %}
+            {% if my_page.type == 'page' %}
+            <li><a href="{{ my_page.url }}" {% if my_page.url == page.url %}class="active"{% endif %}>{{ my_page.title }}</a></li>
+            {% endif %}
+            {% endfor %}
+        </div>
 	    <div class="left_box categories">
 	    	{% for category in site.categories %}
 	        <li>
@@ -15,13 +23,6 @@
 	                {% for cat in site.ww_categories %}{% if category[0] == cat[0] %}{{cat[1]}}{% endif %}{% endfor %}<span>({{ category | last | size }})</span>
 	            </a>
 	        </li>
-	        {% endfor %}
-	    </div>
-	    <div class="left_box">
-	        {% for my_page in site.pages %}
-            {% if my_page.type == 'page' %}
-            <li><a href="{{ my_page.url }}" {% if my_page.url == page.url %}class="active"{% endif %}>{{ my_page.title }}</a></li>
-            {% endif %}
 	        {% endfor %}
 	    </div>
     </div>
