--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,11 +10,6 @@
     <div class="left">
         <div class="left_box">
             <li><a href="/" {% if "/" == page.url %}class="active"{% endif %}>首页</a></li>
-            {% for my_page in site.pages %}
-            {% if my_page.type == 'page' %}
-            <li><a href="{{ my_page.url }}" {% if my_page.url == page.url %}class="active"{% endif %}>{{ my_page.title }}</a></li>
-            {% endif %}
-            {% endfor %}
         </div>
 	    <div class="left_box categories">
 	    	{% for category in site.categories %}
@@ -25,6 +20,13 @@
 	        </li>
 	        {% endfor %}
 	    </div>
+	    <div class="left_box">
+            {% for my_page in site.pages %}
+            {% if my_page.type == 'page' %}
+            <li><a href="{{ my_page.url }}" {% if my_page.url == page.url %}class="active"{% endif %}>{{ my_page.title }}</a></li>
+            {% endif %}
+            {% endfor %}
+        </div>
     </div>
     
     <div class="right">
